discussion/kv_engine/178878/178878_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Check with BackfillManagerIface before creating a scan

Change-Id: I84f226ea5ad3d4cf77615696aa6f0a144f853279

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-08-16 13:01:51.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-16 13:20:49.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19500/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1452:1: error: expected unqualified-id [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1455:1: error: use of undeclared identifier "RangeScanTest_dropped_collection_for_continue_Test" [clang-diagnostic-error]
TEST_P(RangeScanTest, dropped_collection_for_continue) {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest-param-test.h:434:7: note: expanded from macro "TEST_P"
  int GTEST_TEST_CLASS_NAME_(test_suite_name,                                  \
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/internal/gtest-internal.h:1524:3: note: expanded from macro "GTEST_TEST_CLASS_NAME_"
  test_suite_name##_##test_name##_Test
  ^
note: expanded from here
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1546:29: error: use of undeclared identifier "uuid" [clang-diagnostic-error]
                      vbid, uuid, *cookie, 0, std::chrono::milliseconds(0), 0));
                            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19500/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1452:1:
error: expected unqualified-id [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19500/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48399/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\range_scan_test.cc(1452): error C2059: syntax error: "<<" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48399/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40666/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:84:18:
error: member access into incomplete type "const StatCollector"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40666/ )

CMake error: CMakeLists.txt:166 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40666/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9190/ : FAILURE

Compile error at [2022-08-16T13:07:29.448Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1452:1:
error: expected unqualified-id
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9190/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9287/ : FAILURE

Compile error at [2022-08-16T13:07:36.160Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1452:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9287/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21437/ : FAILURE

Compile error at [2022-08-16T13:12:33.996Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1452:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21437/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22512/ : FAILURE

Compile error at [2022-08-16T13:08:18.141Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1452:1:
error: expected unqualified-id
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22512/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21790/ : FAILURE

Compile error at [2022-08-16T13:11:16.159Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1452:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21790/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29815/ : FAILURE

Compile error at [2022-08-16T13:20:16.805Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1452:1:
error: expected unqualified-id
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29815/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20695/ : FAILURE

Compile error at [2022-08-16T13:13:23.531Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1452:1:
error: expected unqualified-id
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20695/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18714/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
